--- a/gradle.properties
+++ b/gradle.properties
@@ -6,9 +6,9 @@ org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\=
 #Android
 android.nonTransitiveRClass=true
 android.useAndroidX=true
+kotlin.mpp.androidGradlePluginCompatibility.nowarn=true
 
 #Kotlin Multiplatform
 kotlin.mpp.enableCInteropCommonization=true
 
-#Ktor
-io.ktor.development=true
+kotlin.apple.xcodeCompatibility.nowarn=true
