--- a/iosApp/Configuration/Config.xcconfig
+++ b/iosApp/Configuration/Config.xcconfig
@@ -1,3 +1,3 @@
 TEAM_ID=
-BUNDLE_ID=comboom.sucht.app.comboom_sucht_App
-APP_NAME=comboom_sucht_App
+BUNDLE_ID=comboom.sucht.app.comboom_sucht_app
+APP_NAME=comboom_sucht_app
