--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,11 +13,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: set up JDK 11
+    - name: set up JDK 17
       uses: actions/setup-java@v3
       with:
-        java-version: '22'
-        distribution: 'openjdk'
+        java-version: '17'
+        distribution: 'temurin'
         cache: gradle
 
     - name: Grant execute permission for gradlew
